# ChangeLog for app-office/openoffice-curvirgo-bin
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*openoffice-curvirgo-bin-2.4.0 (03 Jun 2008)

  03 Jun 2008; Ryoichiro Suzuki <rspace@rspace.org>
  +files/50-openoffice-bin, -files/ooffice-wrapper-1.9, +files/wrapper.in,
  -openoffice-curvirgo-bin-2.0.2.ebuild,
  -openoffice-curvirgo-bin-2.0.3_rc5.ebuild,
  +openoffice-curvirgo-bin-2.4.0.ebuild:
  version bump. remove old versions.
