@@ -3,6 +3,8 @@ AUX ooo-wrapper2 3703 RMD160 bae316eab13ca87c71428c45f7cc2263b7c6e5bf SHA1 404e7
 AUX wrapper.in 96 RMD160 34ca656bc8af3c5b44ed16cebedf5d3297b09a2d SHA1 5861b8434da84efff56e5ceaf53a7668a5f52cea SHA256 97b603968d423e5d8e52c1c14c118647df0a7a858d6a1cb10524af9ea90a9dbc
 DIST OOo_2.2.1_LinuxX86_install_ja_curvirgo_rpm.tar.bz2 129513638 RMD160 dfef6735c94de0545af756aa80fb14785ea512b7 SHA1 89bef2f672a9a2ab4402fd44759dff76a656df9b SHA256 532a7f553fa3800a3f8d5656e1ea3d1acb323d67d977f0a9ef91181d31f9a2c3
 DIST OOo_2.4.0_LinuxX86_install_ja_curvirgo_rpm.tar.bz2 151834744 RMD160 167f725e6b6006d49d8d4e46318e9077cfb592ce SHA1 fb68a58c77a72dea57c25a8a988a2f1cc939402e SHA256 b2b49ff5c01f382503abaae8f1c93ef974bb680347d305e9b0641cd3059a4f4f
+DIST OOo_2.4.1_LinuxX86_install_ja_curvirgo_rpm.tar.bz2 151897451 RMD160 02892d216cfd00f9b59917f53196b5da63d684c7 SHA1 0dc034a5685f1d4a6c134764a64e3890a168011c SHA256 8ef2d2c2e80c939b62be82c8d3c43a741df594591990b328179fe83e4599e990
 EBUILD openoffice-curvirgo-bin-2.2.1.ebuild 4383 RMD160 eb6f16e5dfb59fdc89d741b1458bae41698312c5 SHA1 89dbaad0a77cad603bccca2cd183934e45be6d66 SHA256 d2a13c383368541e69b474262eb53d9b15ac2638b736af0e1d4daf4e512a5a46
 EBUILD openoffice-curvirgo-bin-2.4.0.ebuild 4494 RMD160 60b23c7d2224788d32d18825da92b3370c7e7002 SHA1 d595297644947b085c364d1b90c170e5d8a07455 SHA256 e351af0dea83295ed6593d99bd3a85fff5374d8113b3e3e4dcab67bb1bfa8598
-MISC ChangeLog 473 RMD160 4c122ff69b57bf5a4e175c067c01c209ad07e96d SHA1 a956206a78bb3f779e230066d242c89aa3992f43 SHA256 93c6dfd91950f61a4ef350aa7fbb1a7e221b457e78101b31f1e6216d293e7c25
+EBUILD openoffice-curvirgo-bin-2.4.1.ebuild 4493 RMD160 ec708bcf9ca234fc9f5d0d7a820506044a8683a4 SHA1 360275dba879125d05ff98287722d8fe80e9fa11 SHA256 07dbfd1773dbf43ca39f782db1dec1003a0e8058a7a27d4b65a8f0aa4ecc3e56
+MISC ChangeLog 628 RMD160 1f1d73902c560c407dafe001f1ebf9b5d74dce01 SHA1 b8616e6a3d61f3ff52afd629f26c0f17bdd17a89 SHA256 461f7daab70c5d60a339ad0f8bff05eb65ab3b23075afce2bc262e20388d7aa6
