@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*openoffice-curvirgo-bin-2.4.1 (23 Jun 2008)
+
+  23 Jun 2008; Ryoichiro Suzuki <rspace@rspace.org>
+  +openoffice-curvirgo-bin-2.4.1.ebuild:
+  version age!
+
 *openoffice-curvirgo-bin-2.4.0 (03 Jun 2008)
 
   03 Jun 2008; Ryoichiro Suzuki <rspace@rspace.org>
